objects/DienstartEinsatzzeit__c.object
<CustomObject>
    <label>Dienstart &amp; Einsatzzeit</label>
    <nameField>
        <label>Dienstarten/Zeite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dienstarten &amp; Einsatzzeiten</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Dienstarten</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <referenceTo>Fachbereich__c</referenceTo>
        <relationshipLabel>Type Of Services &amp; Period Of Services</relationshipLabel>
        <relationshipName>Dienstarten</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Dienstarten &amp; Einsatzzeiten</relationshipLabel>
        <relationshipName>Dienstarten_Einsatzzeiten</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TypeOfService__c</fullName>
        <label>Type Of Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Dienstart</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PeriodOfService__c</fullName>
        <label>Period Of Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Dienstzeiten</valueSetName>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>TypeOfServicePeriodOfService</fullName>
        <active>true</active>
        <label>Dienstart &amp; Einsatzzeit</label>
    </recordTypes>
</CustomObject>